Add additional layers from own definitions
- in JOSM format with some exceptions
- basic WMS support
- API key handling

--- a/index.html
+++ b/index.html
@@ -361,6 +361,7 @@
     <script src="keys.js"></script>
     <script src="layers/layers-josm.js"></script>
     <script src="layers/layers-collection.js"></script>
+    <script src="layers/layers-extra.js"></script>
 
     <!-- "gulp inject" for debugging -->
     <!-- inject:js -->
