--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <span data-i18n="navbar.load.title">Load</span>
                     </a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" data-i18n="navbar.load.nogos" data-toggle="modal" data-target="#loadNogos" href="#">Nogos</a>
+                        <a class="dropdown-item" data-i18n="navbar.load.nogos" data-toggle="modal" data-target="#loadNogos" href="#">No-go areas</a>
                     </div>
                 </div>
                 <div class="nav-item">
@@ -209,7 +209,7 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
-                    <h4 class="modal-title" data-i18n="loadNogos.title">Load nogos</h4>
+                    <h4 class="modal-title" data-i18n="loadNogos.title">Load no-go areas</h4>
                 </div>
                 <div class="modal-body">
                     <p id="nogoError" style="display: none;"></p>
@@ -227,15 +227,15 @@
                         <fieldset>
                             <legend data-i18n="loadNogos.defaultProperties">Default properties</legend>
                             <p>
-                                <label for="nogoWeight" data-i18n="loadNogos.nogoWeight">Nogo weight: </label>
+                                <label for="nogoWeight" data-i18n="loadNogos.nogoWeight">No-go weight: </label>
                                 <input type="number" name="nogoWeight" id="nogoWeight" value="-1" />
                             </p>
                             <p>
-                                <label for="nogoRadius" data-i18n="loadNogos.nogoRadius">Nogo radius (for points): </label>
+                                <label for="nogoRadius" data-i18n="loadNogos.nogoRadius">No-go radius (for points): </label>
                                 <input type="number" name="nogoRadius" id="nogoRadius" value="20" />
                             </p>
                             <p>
-                                <label for="nogoBuffer" data-i18n="loadNogos.nogoBuffer">Buffer nogos areas (in meters): </label>
+                                <label for="nogoBuffer" data-i18n="loadNogos.nogoBuffer">Buffer no-go areas (in meters): </label>
                                 <input type="number" name="nogoBuffer" id="nogoBuffer" value="0" />
                             </p>
                         </fieldset>
