Extract all into file per layer, concatenate to single file

--- a/index.html
+++ b/index.html
@@ -359,9 +359,7 @@
     <script src="dist/url-search-params.js"></script>
     <script src="config.js"></script>
     <script src="keys.js"></script>
-    <script src="layers/layers-josm.js"></script>
-    <script src="layers/layers-collection.js"></script>
-    <script src="layers/layers-extra.js"></script>
+    <script src="dist/layers.js"></script>
 
     <!-- "gulp inject" for debugging -->
     <!-- inject:js -->
