Generate layer credits dynamically (#146)

--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
                 </div>
                 <div class="modal-body">
                     <dl>
+                        <dt data-i18n="credits.brouter">BRouter</dt>
+                        <dd data-i18n="[html]credits.brouter-license">
+                            <a target="_blank" href="http://brouter.de/brouter">BRouter</a> &copy; Arndt Brenschede
+                        </dd>
                         <dt data-i18n="credits.map-data">Map data</dt>
                         <dd data-i18n="[html]credits.openstreetmap">
                             &copy; <a target="_blank" href="https://www.openstreetmap.org/copyright" >OpenStreetMap contributors</a>
@@ -86,42 +90,9 @@
                         <dd data-i18n="[html]credits.nominatim">
                             Search by <a href="https://wiki.openstreetmap.org/wiki/Nominatim" target="_blank">Nominatim</a>
                         </dd>
-                        <dt data-i18n="credits.osm-tiles">OpenStreetMap tiles</dt>
-                        <dd data-i18n="[html]credits.osm-license">
-                            <a target="_blank" href="https://www.openstreetmap.org/copyright">openstreetmap.org</a>
-                            under <a target="_blank" href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA 2.0</a>
-                        </dd>
-                        <dt data-i18n="credits.osmde-tiles">OpenStreetMap.de tiles</dt>
-                        <dd>
-                            <a target="_blank" href="https://openstreetmap.de/karte.html">openstreetmap.de</a>
-                        </dd>
-                        <dt data-i18n="credits.opentopomap-tiles">OpenTopoMap tiles</dt>
-                        <dd data-i18n="[html]credits.opentopomap-license">
-                            &copy; <a target="_blank" href="https://opentopomap.org">OpenTopoMap</a>
-                            under <a target="_blank" href="https://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA</a>
-                            <a target="_blank" href="http://viewfinderpanoramas.org">SRTM</a>
-                        </dd>
-                        <dt data-i18n="credits.opencyclemap-outdoors-tiles">OpenCycleMap & Outdoors tiles</dt>
-                        <dd data-i18n="[html]credits.thunderforest-license">
-                            &copy; <a target="_blank" href="https://www.thunderforest.com">Thunderforest</a>
-                            under <a target="_blank" href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA 2.0</a>
-                        </dd>
-                        <dt data-i18n="credits.esri-tiles">Esri World Imagery</dt>
-                        <dd data-i18n="[html]credits.esri-license">
-                            <a target="_blank" href="http://goto.arcgisonline.com/maps/World_Imagery">World Imagery</a>
-                            &copy; <a target="_blank" href="https://www.esri.com/">Esri</a>, sources:
-                            Esri, DigitalGlobe, Earthstar Geographics, CNES/Airbus DS, GeoEye, USDA FSA, USGS, Getmapping, Aerogrid, IGN, IGP, and the GIS User Community
-                        </dd>
-                        <dt data-i18n="credits.cycling-hiking-tiles">Cycling & Hiking tiles</dt>
-                        <dd data-i18n="[html]credits.waymarked-license">
-                            &copy; <a target="_blank" href="https://cycling.waymarkedtrails.org">Waymarked Trails</a>
-                            under <a target="_blank" href="https://creativecommons.org/licenses/by-sa/3.0/de/deed.en">CC-BY-SA 3.0 DE</a>
-                        </dd>
-                        <dt data-i18n="credits.brouter">BRouter</dt>
-                        <dd data-i18n="[html]credits.brouter-license">
-                            <a target="_blank" href="http://brouter.de/brouter">BRouter</a> &copy; Arndt Brenschede
-                        </dd>
                     </dl>
+                    <h5 data-i18n="credits.map-tiles">Map tiles</h5>
+                    <dl id="credits-maps"></dl>
                 </div>
             </div>
         </div>
