Refactor layer configs into separate files (#146)

--- a/index.html
+++ b/index.html
@@ -340,6 +340,7 @@
     <script src="config.js"></script>
     <script src="keys.js"></script>
     <script src="dist/layers.js"></script>
+    <script src="dist/layersConf.js"></script>
 
     <!-- "gulp inject" for debugging -->
     <!-- inject:js -->
