Improve about dialog texts

--- a/index.html
+++ b/index.html
@@ -137,19 +137,15 @@
                     <p>
                         <i data-i18n="about.contact">Contact:</i><br>
                         <ul>
-                            <li><span data-i18n="about.support">General discussions/questions, support:</span><br>
-                                <a href="https://groups.google.com/group/osm-android-bikerouting" target="_blank">https://groups.google.com/group/osm-android-bikerouting</a>
-                            </li>
+                            <li><a href="https://groups.google.com/group/osm-android-bikerouting" target="_blank"><span data-i18n="about.support">General discussions/questions, support</span></a></li>
                             <li><span data-i18n="about.bug-reports">Bug reports and feature requests:</span>
                                 <ul>
-                                    <li>
-                                        <span data-i18n="about.bug-reports-back">server / backend, routing engine, Android app, profiles, brouter.de site:</span><br>
-                                        <a href="https://github.com/abrensch/brouter/issues" target="_blank">https://github.com/abrensch/brouter/issues</a>
-                                    </li>
-                                    <li>
-                                        <span data-i18n="about.bug-reports-front">web client / frontend:</span><br>
-                                        <a href="https://github.com/nrenner/brouter-web/issues" target="_blank">https://github.com/nrenner/brouter-web/issues</a>
-                                    </li>
+                                    <li><a href="https://github.com/abrensch/brouter/issues" target="_blank">
+                                        <span data-i18n="about.bug-reports-back">server/backend, routing engine, Android app, profiles, brouter.de site</span>
+                                    </a></li>
+                                    <li><a href="https://github.com/nrenner/brouter-web/issues" target="_blank">
+                                        <span data-i18n="about.bug-reports-front">web client/frontend.</span>
+                                    </a></li>
                                 </ul>
                             </li>
                         </ul>
