Handle Edge 17 and earlier versions

--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
                                     />
                                 </div>
                             </div>
-                            <fieldset class="form-group row">
+                            <fieldset id="export-format" class="form-group row">
                                 <legend
                                     class="col-form-legend col-sm-2"
                                     data-i18n="export.format"
