Properly disable export button if no route is drawn

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             </select>
                         </div>
                     </form>
-                    <div class="nav-item dropdown">
+                    <div class="nav-item">
                         <a
                             class="nav-link"
                             data-toggle="modal"
