--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
                                 <button
                                     type="button"
                                     class="btn btn-secondary"
-                                    data-i18n="[value]modal.close"
+                                    data-i18n="modal.close"
                                     data-dismiss="modal"
                                 >
                                     Close
@@ -663,7 +663,7 @@
                                 <button
                                     type="button"
                                     class="btn btn-primary"
-                                    data-i18n="[value]export.title"
+                                    data-i18n="export.title"
                                     id="submitExport"
                                 >
                                     Export route
