Separate formatting from translations

--- a/index.html
+++ b/index.html
@@ -952,11 +952,14 @@
                         </p>
                     </li>
                     <li hidden>
-                        <div
-                            class="text-muted small hidden-sm-down"
-                            data-i18n="footer.total-energy"
-                        >
-                            Total Energy | Energy per 100 km
+                        <div class="text-muted small hidden-sm-down">
+                            <span data-i18n="footer.total-energy"
+                                >Total Energy</span
+                            >
+                            |
+                            <span data-i18n="footer.energy-per-100km"
+                                >Energy per 100 km</span
+                            >
                         </div>
                         <p class="stats-label">
                             <span id="totalenergy">-</span>
@@ -974,11 +977,11 @@
                         </p>
                     </li>
                     <li>
-                        <div
-                            class="text-muted small hidden-sm-down"
-                            data-i18n="footer.ascend"
-                        >
-                            Ascend | Plain ascend
+                        <div class="text-muted small hidden-sm-down">
+                            <span data-i18n="footer.ascend">Ascend</span> |
+                            <span data-i18n="footer.plain-ascend"
+                                >Plain ascend</span
+                            >
                         </div>
                         <p class="stats-label">
                             <span id="ascend">-</span>
@@ -996,11 +999,11 @@
                         </p>
                     </li>
                     <li>
-                        <div
-                            class="text-muted small hidden-sm-down"
-                            data-i18n="footer.cost"
-                        >
-                            Cost | Mean cost factor
+                        <div class="text-muted small hidden-sm-down">
+                            <span data-i18n="footer.cost">Cost</span> |
+                            <span data-i18n="footer.mean-cost-factor"
+                                >Mean cost factor</span
+                            >
                         </div>
                         <p class="stats-label">
                             <span id="cost">-</span> |
