Improve number formatting
Use locale-aware number formatting (i.e. add grouping separators).

Use hours and minutes to format travel time.

--- a/index.html
+++ b/index.html
@@ -945,9 +945,9 @@
                         <p class="stats-label">
                             <span id="totaltime">-</span>
                             <abbr
-                                data-i18n="[title]footer.minutes;footer.minutes-abbrev"
-                                title="minutes"
-                                >min</abbr
+                                data-i18n="[title]footer.hours;footer.hours-abbrev"
+                                title="hours"
+                                >h</abbr
                             >
                         </p>
                     </li>
