Add chat in about modal

--- a/index.html
+++ b/index.html
@@ -337,6 +337,15 @@
                                 >
                             </li>
                             <li>
+                                <a
+                                    href="https://webchat.oftc.net/?channels=#brouter"
+                                    target="_blank"
+                                    ><span data-i18n="about.chat"
+                                        >Chat with users and developers</span
+                                    ></a
+                                >
+                            </li>
+                            <li>
                                 <span data-i18n="about.bug-reports"
                                     >Bug reports and feature requests:</span
                                 >
