Warn when server quick fix will remove track name chars (#194, #202)

--- a/index.html
+++ b/index.html
@@ -594,6 +594,10 @@
                                         class="form-control"
                                         id="trackname"
                                     />
+                                    <span
+                                        id="trackname-message"
+                                        class="validation-warning"
+                                    ></span>
                                 </div>
                             </div>
                             <fieldset id="export-format" class="form-group">
