Add an overlay opacity slider

--- a/index.html
+++ b/index.html
@@ -795,6 +795,20 @@
                             </h1>
                             <div id="layers-control-wrapper"></div>
                             <div class="leaflet-control-layers-separator"></div>
+                            <div
+                                class="leaflet-control-layers-overlays-opacity"
+                            >
+                                <p>
+                                    <span
+                                        data-i18n="sidebar.layers.overlay-opacity"
+                                        >Overlay transparency</span
+                                    >
+                                    <span
+                                        id="leaflet-control-layers-overlays-opacity-slider"
+                                    ></span>
+                                </p>
+                            </div>
+                            <div class="leaflet-control-layers-separator"></div>
                             <div id="layers-button-group">
                                 <div hidden id="tree-button-group">
                                     <button
