--- a/index.html
+++ b/index.html
@@ -680,6 +680,28 @@
                                             </label>
                                         </div>
                                     </div>
+                                    <legend
+                                        class="col-form-label col-sm-2"
+                                        data-i18n="export.exportWaypoints"
+                                    >
+                                        <label
+                                            class="form-check-label"
+                                            for="export-waypoints"
+                                        >
+                                            Include waypoints
+                                        </label>
+                                    </legend>
+                                    <div class="col-sm-10">
+                                        <div class="form-check">
+                                            <input
+                                                class="form-check-input"
+                                                id="export-waypoints"
+                                                type="checkbox"
+                                                name="export-waypoints"
+                                                value="1"
+                                            />
+                                        </div>
+                                    </div>
                                 </div>
                             </fieldset>
                             <div class="modal-footer">
