--- a/index.html
+++ b/index.html
@@ -680,26 +680,30 @@
                                             </label>
                                         </div>
                                     </div>
+                                </div>
+                            </fieldset>
+                            <fieldset id="export-includes" class="form-group">
+                                <div class="row">
                                     <legend
                                         class="col-form-label col-sm-2"
-                                        data-i18n="export.exportWaypoints"
+                                        data-i18n="export.include"
                                     >
-                                        <label
-                                            class="form-check-label"
-                                            for="export-waypoints"
-                                        >
-                                            Include waypoints
-                                        </label>
+                                        Include
                                     </legend>
                                     <div class="col-sm-10">
                                         <div class="form-check">
-                                            <input
-                                                class="form-check-input"
-                                                id="export-waypoints"
-                                                type="checkbox"
-                                                name="export-waypoints"
-                                                value="1"
-                                            />
+                                            <label class="form-check-label">
+                                                <input
+                                                    class="form-check-input"
+                                                    id="include-waypoints"
+                                                    type="checkbox"
+                                                    name="include-waypoints"
+                                                />
+                                                <span
+                                                    data-i18n="export.include_waypoints"
+                                                    >Waypoints</span
+                                                >
+                                            </label>
                                         </div>
                                     </div>
                                 </div>
