--- a/index.html
+++ b/index.html
@@ -821,18 +821,12 @@
                             </h1>
                             <div id="layers-control-wrapper"></div>
                             <div class="leaflet-control-layers-separator"></div>
-                            <div
-                                class="leaflet-control-layers-overlays-opacity"
-                            >
-                                <p>
-                                    <span
-                                        data-i18n="sidebar.layers.overlay-opacity"
-                                        >Overlay transparency</span
-                                    >
-                                    <span
-                                        id="leaflet-control-layers-overlays-opacity-slider"
-                                    ></span>
-                                </p>
+                            <div>
+                                <label
+                                    id="leaflet-control-layers-overlays-opacity-slider"
+                                    data-i18n="sidebar.layers.overlay-opacity"
+                                    >Overlay transparency</label
+                                >
                             </div>
                             <div class="leaflet-control-layers-separator"></div>
                             <div id="layers-button-group">
