Use CSS to display no go upload errors

--- a/index.html
+++ b/index.html
@@ -457,7 +457,11 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <p id="nogoError" style="display: none;"></p>
+                        <p
+                            id="nogoError"
+                            class="invalid-feedback"
+                            style="display: none;"
+                        ></p>
                         <form>
                             <fieldset>
                                 <legend data-i18n="loadNogos.source">
