--- a/index.html
+++ b/index.html
@@ -482,10 +482,11 @@
                                     <label
                                         for="nogoFile"
                                         data-i18n="loadNogos.file"
-                                        >File:
+                                        >File (.geojson):
                                     </label>
                                     <input
                                         type="file"
+                                        accept=".geojson"
                                         name="nogoFile"
                                         id="nogoFile"
                                     />
