Rework form inputs validation

--- a/index.html
+++ b/index.html
@@ -500,26 +500,28 @@
                                     <label
                                         for="nogoWeight"
                                         data-i18n="loadNogos.nogoWeight"
-                                        >No-go weight:
+                                        >No-go weight (-1 means impassable):
                                     </label>
                                     <input
                                         type="number"
                                         name="nogoWeight"
                                         id="nogoWeight"
                                         value="-1"
+                                        min="-1"
                                     />
                                 </p>
                                 <p>
                                     <label
                                         for="nogoRadius"
                                         data-i18n="loadNogos.nogoRadius"
-                                        >No-go radius (for points):
+                                        >No-go radius for points (in meters):
                                     </label>
                                     <input
                                         type="number"
                                         name="nogoRadius"
                                         id="nogoRadius"
                                         value="20"
+                                        min="0"
                                     />
                                 </p>
                                 <p>
@@ -533,6 +535,7 @@
                                         name="nogoBuffer"
                                         id="nogoBuffer"
                                         value="0"
+                                        min="0"
                                     />
                                 </p>
                             </fieldset>
