First PoC for UI for customizing profile

--- a/index.html
+++ b/index.html
@@ -646,6 +646,7 @@
                                 ><span data-i18n="sidebar.custom-profile.title">Custom profile</span>
                             </h1>
                             <form class="flexcolumn flexgrow">
+                                <div id="profile_params"></div>
                                 <textarea
                                     class="form-control flexgrow"
                                     id="profile_upload"
